--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,11 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "com.anonymous.uberedmtrider"
         minSdkVersion 26
@@ -55,4 +60,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'com.google.android.libraries.places:places:2.3.0'
     implementation 'com.shamanland:xdroid-toaster:0.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
